--- a/gedata/static/gedata/css/main.css
+++ b/gedata/static/gedata/css/main.css
@@ -168,6 +168,10 @@ table.menu_table.td {
     font-size: 33%;
 }
 
+.heavy {
+    font-weight: bold;
+}
+
 button.footer_button {
     background-color: aliceblue;
     border: 2px solid navy;
@@ -291,7 +295,8 @@ button.footer_button:hover {
    https://getbootstrap.com/docs/4.3/examples/sticky-footer-navbar/
  */
 main > .container {
-  padding: 60px 15px 0;
+    padding: 20px 15px 0;
+    max-width: 1080px;
 }
 
 body {
