new performance menu option

--- a/gedata/templates/gedata/base.html
+++ b/gedata/templates/gedata/base.html
@@ -41,10 +41,10 @@
                 <a class="nav-link" href="{% url 'gedata:filter' %}">Filter</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'gedata:compare' %}">Old Compare</a>
+                <a class="nav-link" href="{% url 'gedata:comparison' %}">New Compare</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'gedata:comparison' %}">New Compare</a>
+                <a class="nav-link" href="{% url 'gedata:performance' %}">Performance</a>
             </li>
             </ul>
         </div>
