Moved latest update footer data to REST/AJAX Moved PyGEST installation to docker-compose.yml from Dockerfile cleaned out stale, unused code

--- a/gedata/static/gedata/css/main.css
+++ b/gedata/static/gedata/css/main.css
@@ -154,6 +154,10 @@ div.descriptor p,ul {
 td {
   width: 10%;
 }
+table.footer_summary td {
+    padding: 8px;
+    width: auto;
+}
 
 table.menu_table {
   width: 80%;
