add a little more space for the footer

--- a/gedata/templates/gedata/base.html
+++ b/gedata/templates/gedata/base.html
@@ -58,7 +58,7 @@
 <p><!-- Take up a little space behind the header. --><br /></p>
 {% block content %}
 {% endblock %}
-<p><!-- Take up a little space behind the footer. --><br /><br /></p>
+<p><!-- Take up a little space behind the footer. --><br /><br /><br /></p>
 
 </div>
 </main>
