moved gene analysis to its own file broke out results text in addition to plots

--- a/gedata/templates/gedata/comparison.html
+++ b/gedata/templates/gedata/comparison.html
@@ -66,13 +66,23 @@
             <div id="left_image"><!-- replaced onload --><img src="{{ left_image.url }}" alt="{{ left_image.description }}"></div>
             <div id="left_caption" class="descriptor"><!-- replaced onload --></div>
             <div id="left_descriptor" class="descriptor"><!-- replaced onload --></div>
+            <div id="left_genes" class="descriptor"><!-- replaced onload --></div>
             <div id="left_go" class="descriptor"><!-- replaced onload --></div>
         </div>
         <div class="right_side">
             <div id="right_image"><!-- replaced onload --><img src="{{ right_image.url }}" alt="{{ right_image.description }}"></div>
             <div id="right_caption" class="descriptor"><!-- replaced onload --></div>
             <div id="right_descriptor" class="descriptor"><!-- replaced onload --></div>
+            <div id="right_genes" class="descriptor"><!-- replaced onload --></div>
             <div id="right_go" class="descriptor"><!-- replaced onload --></div>
+        </div>
+        <div class="left_side">
+            <div id="left_overlap_image"><!-- replaced onload --></div>
+            <div id="left_overlap_descriptor" class="descriptor"><!-- replaced onload --></div>
+        </div>
+        <div class="right_side">
+            <div id="right_overlap_image"><!-- replaced onload --></div>
+            <div id="right_overlap_descriptor" class="descriptor"><!-- replaced onload --></div>
         </div>
         <div class="left_side">
             <div id="left_perf_image"><!-- replaced onload --></div>
