--- a/gedata/templates/gedata/resultset.html
+++ b/gedata/templates/gedata/resultset.html
@@ -45,6 +45,7 @@
             <div id="image"><!-- replaced onload --><img src="{{ image.url }}" alt="{{ image.description }}"></div>
             <div id="caption" class="descriptor"><!-- replaced onload --></div>
             <div id="descriptor" class="descriptor"><!-- replaced onload --></div>
+            <div id="genes" class="descriptor"><!-- replaced onload --></div>
             <div id="go" class="descriptor"><!-- replaced onload --></div>
         </div>
 
